--- a/screens/screenGastos/screenGastos.kv
+++ b/screens/screenGastos/screenGastos.kv
@@ -39,7 +39,7 @@
         MDLabel:
             bold:True
             halign:'center'
-            size_hint_y:.1
+            adaptive_height:True
             text:'Balance: '+"${:,.2f}".format(root.balance)
             id:balance
             font_size:sp(20)
